--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bkintanar/advanced-nova-media-library",
+    "name": "suresale/advanced-nova-media-library",
     "description": "Laravel Nova tools for managing the Spatie media library.",
     "keywords": [
         "laravel",
@@ -8,7 +8,7 @@
     "license": "MIT",
     "require": {
         "php": ">=7.1.0",
-        "laravel/framework": "^5.6|^6.0|^7.0",
+        "laravel/framework": "87.0",
         "laravel/nova": "^2.0|^3.0",
         "spatie/laravel-medialibrary": "^8.0"
     },
