--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "license": "MIT",
     "require": {
         "php": ">=7.1.0",
-        "laravel/framework": "87.0",
+        "laravel/framework": "^8.0",
         "laravel/nova": "^2.0|^3.0",
         "spatie/laravel-medialibrary": "^8.0"
     },
